# KeepPlayer

./: README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lewis/keepplayer/demo/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/keepplayer/: build.gradle
android/keepplayer-native/: CMakeLists.txt  build.gradle
android/keepplayer-native/src/main/: AndroidManifest.xml
android/keepplayer-native/src/main/cpp/: AndroidAudioPlay.cpp  AndroidAudioPlay.h  AndroidVideoPlay.cpp  AndroidVideoPlay.h  GLThread.cpp  GLThread.h  GLThreadHelper.cpp  GLThreadHelper.h  JniCallBack.cpp  JniCallBack.h  JniIml.cpp  KPAndroidLog.cpp  KPAndroidLog.h
android/keepplayer/src/main/: AndroidManifest.xml
android/keepplayer/src/main/java/com/lewis/keepplayer/: ISurfaceListener.kt  KPVideoView.kt  KeepPlayer.kt  KeepPlayerNative.kt  KeepPlayerSurfaceView.kt
includes/ffmpeg/libffmpeg/: config.h
player/: CMakeLists.txt  KeepPlayer.cpp  KeepPlayer.h  PlayListener.cpp  PlayListener.h  main.cpp
player/base/: Base.cpp  Base.h  BaseQueueController.cpp  BaseQueueController.h  Config.h  GLUtil.h  ImageParseUtil.cpp  ImageParseUtil.h  Log.cpp  Log.h  Macros.h  TaskQueue.cpp  TaskQueue.h
player/media/: AudioDecoder.cpp  AudioDecoder.h  AudioPlay.cpp  AudioPlay.h  IDecoder.cpp  IDecoder.h  PacketQueue.cpp  PacketQueue.h  PacketRead.cpp  PacketRead.h  Parse.cpp  Parse.h  ProgressSync.cpp  ProgressSync.h  VideoDecoder.cpp  VideoDecoder.h  VideoPlay.cpp  VideoPlay.h
player/model/: AudioBuffer.cpp  AudioBuffer.h  BaseNode.cpp  BaseNode.h  ParseResult.cpp  ParseResult.h  Result.cpp  Result.h  VideoYUVBuffer.cpp  VideoYUVBuffer.h
player/render/: BaseGLRender.cpp  BaseGLRender.h  IRender.h  RGBGLRender.cpp  RGBGLRender.h  YUVGLRender.cpp  YUVGLRender.h
